# bigbank

./: .gitignore  PROJECT_REPORT.md  README.md  Taskfile.yml  fix2.py  fix_auth.js  fix_auth.py  output.txt  seed-accounts.sql  start-all.ps1  test_phase_3.ps1
fraud-service/: Cargo.toml
fraud-service/src/: main.rs
ledger/: build.gradle.kts
ls_springboot/: build.gradle.kts
migrations/: 001_create_initial_schema.sql  002_create_auth_tables.sql  003_create_users_table.sql  004_update_accounts_table.sql  005_enforce_user_account_1_to_1.sql  006_add_idempotency_keys.sql  007_enforce_positive_balance.sql
report/: ERROR_HANDLING_ANALYSIS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_7_COMPLETE.md  PROJECT_REPORT.md
scripts/: common.ps1  concurrency-test.ps1  demo.ps1  load-test.ps1  run-fraud.ps1  run-ledger.ps1  run-migrations.ps1  run-migrations.sh  run-transaction.ps1  run-ui.ps1  smoke-test.ps1  start-all.ps1  stop-all.ps1  test-duplicate-idempotency.ps1  test-fraud-rejection.ps1  test-fraud.ps1  test-ledger.ps1  test-transaction.ps1  test-transfer-success.ps1  test-ui.ps1  verify-db.ps1
transaction-service/: go.mod  go.sum
transaction-service/.gocache/: trim.txt
transaction-service/.gocache/00/: 000fb1ec1d2d56fa55c9e3fd9291f03113793920f16650fe0457c34bf374112b-a  (+3 more)
transaction-service/cmd/: main.go
ui/: next.config.ts  package-lock.json  package.json
ui/app/: AppShell.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
ui/lib/: server-api.ts  session.ts  types.ts
(+1386 files in other folders)
