[package]
name = "fraud-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", features = ["clock", "serde"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
